<resources>
    <string name="app_name">Maximyz Tax Return</string>
    <string name="action_settings">Settings</string>
    <string name="alert_dialog_yes">yes</string>
    <string name="alert_dialog_no">no</string>
    <string name="alert_dialog_title">notification</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hint_User_name">Username</string>
    <string name="hint_pass_word">Password</string>
    <string name="title_create_account">Create account</string>
    <string name="label_mail">Email Address</string>
    <string name="label_mobile">mobile phone</string>
    <string name="label_password">password</string>
    <string name="label_re_password">re-password</string>
    <string name="policy">I agree with Term and Privacy policy</string>
    <string name="term">Term</string>
    <string name="register_privacy_policy">Privacy policy</string>
    <string name="btn_register">register</string>
    <string name="ok">OK</string>
    <string name="error">Error!</string>
    <string name="retry_title">No internet connection</string>
    <string name="retry_content">Please check your internet connection and try again</string>
    <string name="retry">Retry</string>
    <string name="report_cancel">cancel</string>
    <string name="btn_create_account">Create new account</string>
    <string name="password_retrieval">Retrieve Login\nInformation</string>
    <string name="btn_send">send</string>
    <string name="hint_email">Your email address</string>
    <string name="hint_mobile">Your mobile</string>
    <string name="or">or</string>
    <string name="error_empty">Please Enter content.</string>
    <string name="btn_login">login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="valid_password">Password of at least 5 characters.</string>
    <string name="send_successfully">send request successfully.</string>
    <string name="vali_re_password">password is not matching.</string>
    <string name="preview_image_title">Preview</string>
    <string name="error_must_one">You must select at least one option!</string>
    <string name="logout">Are you sure you want to logout?</string>
    <string name="required_all">All fields are required!</string>
    <string name="required_image">Attach images are required!</string>
    <string name="remove">Are you sure you want to remove?</string>
    <string name="attach_img_title">Attach image</string>
    <string name="attach_img_source">Select source</string>
    <string name="attach_img_camera">Camera</string>
    <string name="attach_img_gallery">Gallery</string>
    <string name="max_size_attach_error">Maximun file size is %1$d MB.\nPlease select another photo!</string>
    <string name="min_size_attach_error">Extenstion not support.\nPlease select another photo!</string>
    <string name="err_pick_image">You must select at least one image</string>
    <string name="max_image_attach_err">Maximum %1$d images attached !</string>
    <string name="home_title">Tax Return</string>
    <string name="home_menu1">Tax Return</string>
    <string name="home_menu2">Contact Accountant</string>
    <string name="home_menu3">Notification</string>
    <string name="delete_application">Are you sure to delete this application?</string>
    <string name="delete_application_title">Delete Application</string>
    <string name="start">START</string>
    <string name="review">REVIEW</string>
    <string name="submitted">Submitted</string>
    <string name="completed">Completed</string>
    <string name="auditing">Auditing</string>
    <string name="percent">%1$d %</string>
    <string name="add_new_board_title">NEW TAX RETURN APPLICATION</string>
    <string name="add_new">ADD NEW</string>
    <string name="duplicate_app_exit">Duplicate an existing application</string>
    <string name="create_new_app">Create a new application</string>
    <string name="tax_payer_hint">Tax payer</string>
    <string name="financial_year_hint">Financial year</string>
    <string name="income_ws_title">Income</string>
    <string name="wages_salary">Wages/Salary</string>
    <string name="income_ws_des1">Do you have</string>
    <string name="income_ws_des2">PAYG payment summary?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="tfn_hint">Enter your TFN</string>
    <string name="your_name">YOUR NAME</string>
    <string name="first_name_hint">First name</string>
    <string name="middle_name_hint">Mid name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="birthday">YOUR BIRTHDAY</string>
    <string name="next">NEXT</string>
    <string name="gallery">Gallery</string>
    <string name="your_birthday">Your Birthday</string>
    <string name="valid_tfn">please enter a valid TFN</string>
    <string name="valid_title">Enter title</string>
    <string name="valid_first_name">Enter first name</string>
    <string name="valid_mid_name">Enter mid name</string>
    <string name="valid_last_name">Enter last name</string>
    <string name="valid_birth_day">Enter your birthday</string>
    <string name="income_other_title">Income</string>
    <string name="income_other_resource">Other resource</string>
    <string name="income_other_content">These sources of income may include government suport, investment, business, dividends, rental properties and foreign income. Please select Yes if you are not sure, our account will process your case from our end to make sure everything is right for your application</string>
    <string name="income_other_hint">Example: Retail properties, investment</string>
    <string name="income_other_img">payg image</string>
    <string name="valid_income_content">Enter income content</string>
    <string name="income_other_ask">Do you have other sources of income?</string>
    <string name="lable_income">Please provide some information about your other sources of income</string>
    <string name="income_deduction_hint">Example: Labourer, Restaurant worl</string>
    <string name="deduction_title">deductions</string>
    <string name="deduction_content">Please let our accountants know what you do at work so that we can help in putting your deduction claims.</string>
    <string name="valid_deduction_content">Enter deduction content</string>
    <string name="valid_deduction_image">please choose at least a photo</string>
    <string name="estimate_title">estimate tax refund</string>
    <string name="estimate_content">Our accountant will process your applicaition and fill in other information using our expertise to help you get the best possible tax refund.   You will be notified to review the final application and provide extra information if required before we loge it to ATO.</string>
    <string name="estimate_note">* Please click Next to provide your personal information</string>
    <string name="personal_title">title</string>
    <string name="your_title">Your title</string>
    <string name="personal_your_name">your name</string>
    <string name="gender">gender</string>
    <string name="permanant_residence">Are you Australian or Permanent Residence?</string>
    <string name="personal_information_title">personal information</string>
    <string-array name="string_array_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>
    <string name="valid_personal_title">Enter your title</string>
    <string name="submit_bank_account">Your tax refund will be transfered to your bank account.</string>
    <string name="bank_account_name">bank account name</string>
    <string name="bsb">bsb</string>
    <string name="account_number">account number</string>
    <string name="provide_postal">Please provide postal address.</string>
    <string name="street_number">Street number and name</string>
    <string name="suburb">Suburb</string>
    <string name="state">state</string>
    <string name="post_code">post code</string>
    <string name="phone_number">phone number</string>
    <string name="email_address">email address</string>
    <string name="submit">submit</string>
    <string name="privacy_policy">* By clicking on the button below. You agree with Privacy policy and Term and conditions.</string>
    <string name="valid_app_bank_name">Enter bank account name</string>
    <string name="valid_app_bsb">Enter BSB</string>
    <string name="valid_app_account_number">Enter account number</string>
    <string name="valid_app_street_name">Enter Street number and name</string>
    <string name="valid_app_suburb">Enter suburb</string>
    <string name="valid_app_state">Enter state</string>
    <string name="valid_app_post_code">Enter post code</string>
    <string name="valid_app_phone">Enter Phone number</string>
    <string name="valid_app_email">Enter email address</string>
    <string name="valid_app_email_2">Please enter a valid email address</string>
    <string name="valid_app_phone_2">Please enter a valid phone number</string>
    <string name="first_checkout_title">CHECK OUT</string>
    <string name="service_fee">Our services fee</string>
    <string name="total_fee">Total payable fee</string>
    <string name="promotion_hint">Promotion code</string>
    <string name="menu_personal">Personal Information</string>
    <string name="menu_personal_name">Name &amp; Residency</string>
    <string name="menu_personal_bank">Bank &amp; Address</string>
    <string name="menu_personal_education">Education Debt</string>
    <string name="menu_incomes">Incomes</string>
    <string name="menu_incomes_wages">Wages/salary</string>
    <string name="menu_incomes_government">Government Payments</string>
    <string name="menu_incomes_interests">Interests</string>
    <string name="menu_incomes_dividends">Dividends</string>
    <string name="menu_incomes_early">Early Termination Payments</string>
    <string name="menu_incomes_annuities">Annuities &amp; Supers</string>
    <string name="menu_incomes_rental">Rental Properties</string>
    <string name="menu_deductions">Deductions</string>
    <string name="menu_deductions_vehicles">Vehicles</string>
    <string name="menu_deductions_clothing">Clothing</string>
    <string name="menu_deductions_education">Education</string>
    <string name="menu_deductions_otherworks">Other works</string>
    <string name="menu_deductions_donations">Donations</string>
    <string name="menu_deductions_tax_agents">Tax Agents</string>
    <string name="menu_family_health">Family &amp; Health</string>
    <string name="menu_family_health_dependants">Dependants</string>
    <string name="menu_family_health_medicare">Medicare Levy Exemption</string>
    <string name="menu_family_health_private">Private Health</string>
    <string name="menu_family_health_spouse">Spouse</string>
    <string name="review_fhp_health">Health Insurer</string>
    <string name="review_fhp_health_hint">Medibank</string>
    <string name="review_fhp_membership">Membership Number</string>
    <string name="review_fhp_membership_hint">123456789</string>
    <string name="review_fhp_premiums">Premiums Paid</string>
    <string name="review_fhp_premiums_hint">$1000</string>
    <string name="review_fhp_government">Government Rebate Received</string>
    <string name="review_fhp_government_hint">$1000</string>
    <string name="review_fhp_day">How many days your private hospital is covered?</string>
    <string name="review_fhp_day_hint">30</string>
    <string name="app_sologan">Lets optimize your tax return\nwith our online accountants</string>
</resources>