<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/line_color" />

    <au.mccann.oztaxreturn.view.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/review_fhp_health"
        android:textAllCaps="true"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/size_small" />

    <au.mccann.oztaxreturn.view.EdittextCustom
        android:id="@+id/edt_health"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/review_fhp_health_hint"
        android:textColor="@color/income_conten" />

    <au.mccann.oztaxreturn.view.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/review_fhp_membership"
        android:textAllCaps="true"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/size_small" />

    <au.mccann.oztaxreturn.view.EdittextCustom
        android:id="@+id/edt_membership"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/review_fhp_membership_hint"
        android:inputType="number"
        android:textColor="@color/income_conten"
        android:textColorHint="@color/tv_gray" />

    <au.mccann.oztaxreturn.view.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/review_fhp_premiums"
        android:textAllCaps="true"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/size_small" />

    <au.mccann.oztaxreturn.view.EdittextCustom
        android:id="@+id/edt_premium"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/review_fhp_premiums_hint"
        android:inputType="number"
        android:textColor="@color/income_conten"
        android:textColorHint="@color/tv_gray" />

    <au.mccann.oztaxreturn.view.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/review_fhp_government"
        android:textAllCaps="true"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/size_small" />

    <au.mccann.oztaxreturn.view.EdittextCustom
        android:id="@+id/edt_government"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/review_fhp_government_hint"
        android:inputType="number"
        android:textColor="@color/income_conten"
        android:textColorHint="@color/tv_gray" />

    <au.mccann.oztaxreturn.view.TextViewCustom
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/review_fhp_day"
        android:textAllCaps="true"
        android:textColor="@color/tv_gray"
        android:textSize="@dimen/size_small" />

    <au.mccann.oztaxreturn.view.EdittextCustom
        android:id="@+id/edt_day"
        style="@style/EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/review_fhp_day_hint"
        android:inputType="number"
        android:textColor="@color/income_conten"
        android:textColorHint="@color/tv_gray" />

    <au.mccann.oztaxreturn.view.MyGridView
        android:id="@+id/gr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:numColumns="3" />

</LinearLayout>