<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Mr Justin"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="2017-2018"
                android:textColor="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="70%"
                android:textColor="@color/white" />

            <!--<ProgressBar-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/menu_up" />

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/menu_personal"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <au.mccann.oztaxreturn.view.ExpandableLayout
            android:id="@+id/layout_expandable_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_menu_margin"
                android:orientation="vertical">

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_personal_name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_personal_bank"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_personal_education"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </au.mccann.oztaxreturn.view.ExpandableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/menu_up" />

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/menu_incomes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <au.mccann.oztaxreturn.view.ExpandableLayout
            android:id="@+id/layout_expandable_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_menu_margin"
                android:orientation="vertical">

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_wages"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_government"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_interests"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_dividends"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_early"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_annuities"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_incomes_rental"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </au.mccann.oztaxreturn.view.ExpandableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/menu_up" />

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/menu_deductions"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <au.mccann.oztaxreturn.view.ExpandableLayout
            android:id="@+id/layout_expandable_deductions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_menu_margin"
                android:orientation="vertical">

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_deductions_vehicles"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_deductions_clothing"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_deductions_education"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_deductions_otherworks"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_deductions_donations"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_deductions_tax_agents"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>

        </au.mccann.oztaxreturn.view.ExpandableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:src="@drawable/menu_up" />

            <au.mccann.oztaxreturn.view.TextViewCustom
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/menu_family_health"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <au.mccann.oztaxreturn.view.ExpandableLayout
            android:id="@+id/layout_expandable_family_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:el_duration="500"
            app:el_expanded="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_menu_margin"
                android:orientation="vertical">

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_family_health_dependants"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_family_health_medicare"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_family_health_private"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <au.mccann.oztaxreturn.view.TextViewCustom
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_family_health_spouse"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </au.mccann.oztaxreturn.view.ExpandableLayout>

    </LinearLayout>
</ScrollView>