<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37.5dp"
        android:layout_marginLeft="37.5dp"
        android:layout_marginRight="37.5dp"
        android:layout_marginStart="37.5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/img_logo" />

        <au.mccann.oztaxreturn.view.TextViewCustom
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_sologan"
            android:textColor="@color/white"
            android:textSize="@dimen/size_nomal" />

        <au.mccann.oztaxreturn.view.ButtonCustom
            android:id="@+id/btn_login"
            style="@style/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/btn_login" />

        <au.mccann.oztaxreturn.view.ButtonCustom
            android:id="@+id/btn_register"
            style="@style/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_selector_while"
            android:text="@string/btn_create_account" />
    </LinearLayout>
</ScrollView>
